@startuml
'https://plantuml.com/class-diagram

title "US 5.1.13 - Domain Model"

package "<<aggregate Staff>>" {
    entity Staff <<entity>><<root>>{}
    class LicenseNumber <<(V,#FF8B40)value object>> <<identifier>> {}
    class Name <<(V,#FF8B40)value object>> {}
    class FirstName <<(V,#FF8B40)value object>> {}
    class LastName <<(V,#FF8B40)value object>> {}
    class FullName <<(V,#FF8B40)value object>> {}
    class Phone <<(V,#FF8B40)value object>> {}
    class Email <<(V,#FF8B40)value object>> {}
    class Address <<(V,#FF8B40)value object>> {}
    class Slot <<(V,#FF8B40)value object>> {}
    class Date <<(V,#FF8B40)value object>> {}
    class TimeInterval <<(V,#FF8B40)value object>> {}
    class Function <<(V,#FF8B40)value object>>  {}
    class Status <<(V,#FF8B40)value object>> {}
}


package "<<aggregate Specialization>>"{
    entity Specialization <<entity>> <<root>> {}
    class SpecializationDenomination <<(V,#FF8B40)value object>>  {}
}



Name --> FirstName
Name -> LastName
Name --> FullName

Staff --> "1" Status
Staff --> "1" Name
Staff --> "1" Function
Staff ---> "1" Email
Staff ---> "1" Phone
Staff --> "1" Address
Staff --> "1" LicenseNumber
Staff ---> "0..*" Slot
Staff --> "1" Specialization
Specialization --> "1" SpecializationDenomination
Slot --> "1" Date
Slot --> "1" TimeInterval

@enduml